# STAR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SETUP.md  build_dist.bat  steam_api.def
.github/workflows/: build.yml
sdk/steam/: isteamapps.h  isteamapps005.h  isteamapps006.h  isteamapps007.h  isteamapps008.h  isteamclient.h  isteamclient001.h  isteamclient002.h  isteamclient003.h  isteamclient004.h  isteamclient005.h  isteamclient021.h  isteamclient022.h  isteamcontroller.h  isteamgameserver001.h  isteamgameserver002.h  isteamgameserveritems.h  isteamgameserveritems001.h  isteamgameserveritems002.h  isteamgameserveritems003.h  isteaminput.h  isteammatchmaking.h  isteamparentalsettings.h  isteamremoteplay.h  isteamremoteplay003.h  isteamremotestorage003.h  isteamugc.h  isteamuser001.h  isteamuser002.h  isteamuser002_old.h  isteamuser004.h  isteamuser004_old.h  isteamuser005.h  isteamuser006.h  isteamuser007.h  isteamuseritems.h  isteamuseritems001.h  isteamuseritems002.h  isteamuseritems003.h  steam_api.h  (+5 more)
src/core/: art_stamp.cpp  art_stamp.h  callbacks.cpp  callbacks.h  config.cpp  config.h  settings.cpp  settings.h  star_api.cpp  star_common.h  storage.cpp  storage.h
src/overlay/: overlay.cpp  overlay.h
src/steam/: steam_applist.cpp  steam_applist.h  steam_apps.cpp  steam_apps.h  steam_client.cpp  steam_client.h  steam_controller.cpp  steam_controller.h  steam_friends.cpp  steam_friends.h  steam_game_server.cpp  steam_game_server.h  steam_game_server_stats.cpp  steam_game_server_stats.h  steam_html_surface.cpp  steam_html_surface.h  steam_http.cpp  steam_http.h  steam_input.cpp  steam_input.h  steam_inventory.cpp  steam_inventory.h  steam_matchmaking.cpp  steam_matchmaking.h  steam_matchmaking_servers.cpp  steam_matchmaking_servers.h  steam_music.cpp  steam_music.h  steam_music_remote.cpp  steam_music_remote.h  steam_networking.cpp  steam_networking.h  steam_networking_sockets.h  steam_networking_utils.h  steam_parental_settings.h  steam_parties.h  steam_remote_play.h  steam_remote_storage.cpp  steam_remote_storage.h  steam_screenshots.cpp  (+13 more)
